--- a/client/src/_styles.scss
+++ b/client/src/_styles.scss
@@ -59,17 +59,17 @@ $breakpoint-phone: 900px;
   }
 }
 
-@mixin cardView {
-  display: flex;
-  height: 100%;
+// @mixin cardView {
+//   display: flex;
+//   height: 100%;
 
-  @media screen and (min-width: $breakpoint-phone) {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 90vh;
-  }
-}
+//   @media screen and (min-width: $breakpoint-phone) {
+//     display: flex;
+//     justify-content: space-evenly;
+//     align-items: center;
+//     height: 90vh;
+//   }
+// }
 
 @mixin cardEmpty {
   margin-top: 50%;
